# dovecot-openchange-plugin

./: README.md  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile  Makefile.am  openchange-plugin.c  openchange-plugin.h
